float behind fixed top nav?
test

--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ margin: 0 0.2rem;
   display: flex;
   flex-grow: 1;
   justify-content: center;
-  position: relative;
+  position: absolute;
 }
 .services > div{
 	flex:1 1 auto;
